Adding NotificationExample.kt and BroadcastReceiverExample.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="enter_your_todo">Enter your todo</string>
     <string name="add">Add</string>
     <string name="dummy_todo">Dummy Todo</string>
+    <string name="show_notification">Show Notification</string>
 </resources>
