--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="add">Add</string>
     <string name="dummy_todo">Dummy Todo</string>
     <string name="show_notification">Show Notification</string>
+    <string name="enter_email_address">Enter Email Address</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="login">Login</string>
+    <string name="sign_in_with_google">Sign In With Google</string>
+    <string name="dont_have_an_account_register_now">Dont Have an Account?? Register Now</string>
+    <string name="enter_full_name">Enter Full Name</string>
+    <string name="enter_phone_number">Enter Phone Number</string>
+    <string name="register">Register</string>
+    <string name="already_have_an_account_login">Already have an account ?? Login</string>
 </resources>
